# go-pcre

./: BUILD.bazel  build_lib.sh  platform_darwin_amd64.go  platform_darwin_arm64.go
