
go_library(
    name = "go_default_library",
    srcs = [
        "pcre.go",
        "pcre.h",
        "pcre_fallback.h",
        "platform_darwin_amd64.go",
        "platform_darwin_arm64.go",
        "platform_linux.go",
    ],
    cdeps = [":libpc"],
    cgo = True,
    importpath = "github.com/rubrikinc/go-pcre",
    visibility = ["//visibility:public"],
)

cc_import(
    name = "libpc",
    hdrs = ["pcre.h"],
    static_library = select({
        "@io_bazel_rules_go//go/platform:darwin_amd64": ":libpcre_darwin_x86_64.a",
        "@io_bazel_rules_go//go/platform:darwin_arm64": ":libpcre_darwin_arm64.a",
        "@io_bazel_rules_go//go/platform:linux": ":libpcre_linux.a",
    }),
    alwayslink = 1,
)
